--- a/docs/_posts/2022-11-03-Fluxes.markdown
+++ b/docs/_posts/2022-11-03-Fluxes.markdown
@@ -16,7 +16,7 @@ $n_i =\sum_{j=1}^N \Lambda_i(\vec{r}_j )$
 
 where $\Lambda_i(\vec{r}_j)$ is an indicator function which 0 or 1 depending on whether  $\vec{r}_j$ is inside subvolume $i$ or not, and the  components of the flux are (for example, the x component)
 
-$(F_x)_i =\sum_{j=1}^N \Lambda_i(\vec{r}_j) (\Delta\vec{r}_j)_x$
+$$ (F_x)_i =\sum_{j=1}^N \Lambda_i(\vec{r}_j) (\Delta\vec{r}_j)_x $$
 
 where $\Delta \vec{r}_j$ i s the displacement.  The average velocities per sub volume is then
 
