--- a/docs/_posts/2022-11-03-Fluxes.markdown
+++ b/docs/_posts/2022-11-03-Fluxes.markdown
@@ -46,4 +46,5 @@ I then perform steady state averaging as well as averaging across the z directio
 
 - There are nontrivial fluxes: particles are advected from the low density to the high density away from the obstacle and flow around the obstacle in its vicinity.
 - The curl (and to some extent the e divergence) peak around the contact points
-- The curl has opposite signs at the two ends of the obstacle.
+- The flow patterns for the more repulsive barries ($\varepsilon=30$) shares some similarities with the quadrupole around ellipsoidal obstacles (from Wagner et al. (2022).  [doi:10.1088/1742-5468/ac42cf](https://iopscience.iop.org/article/10.1088/1742-5468/ac42cf) ):
+  ![image-20221105204821374](/images/Refs/quadrupole.png)
